--- a/Introduction.tex
+++ b/Introduction.tex
@@ -82,4 +82,4 @@ In order to adequately model human agency, we must depart from the familiar and 
  
 %My research validates the approach by using \DASL to analyze aviation mishaps, illustrating its usefulness. I formalize three aviation mishaps in \DASL, and this shows how \DASL allows for the inference of particular safety-critical information from actions. Establishing this logical inference is one thing, computing the inference is another. My thesis proceeds by using the Z3 Theorem Prover to compute the safety-critical information. My proposal is to extend this research by constructing a monitor prototype based on the logic suitable for runtime diagnosis of information misflow, that is, when safety-critical information fails to reach the human agent and inform her actions. Because we can deduce which safety-critical information is missing from her knowledge base, we can automatically act to correct this misflow.This is where information assurance comes in. Information assurance is the field of computer science studying the desirable properties of information systems relating to information flow. In particular, information assurance is concerned with properties like confidentiality, integrity, and availability, among others. If a system is designed to interact with a human, then one of its desired properties is that the safety-critical information successfully flows to the human and informs her actions. Sometimes humans become overwhelmed by information competing for their attention, especially during emergency situations. This phenomenon is called information overload. It leads to human behavior that is suboptimal and often dangerous~\cite{hwang}. The problem, in terms of information assurance properties, is that some safety-critical information is not reaching the human component because the human component's cognitive resources are unavailable, suffering from a sort of denial-of-service attack. I propose to formally characterize this situation in my research, and offer strategies for automated enforcement of safety-critical information reaching the human component.
 
-In what follows, we describe the relevant background material in Chapter~\ref{CH_02}, including the foundations of game theory and the logical models of agency informing our new developments. Chapter~\ref{CH_03} motivates departure from \SFive\ as a static base and present \DASL, then proves that it is sound and complete using the Coq Proof Assistant. Chapter~\ref{CH_04} applies \DASL to three aviation mishaps, again formalized in Coq. Chapter~\ref{CH_05} uses the Z3 Theorem Prover's Satisfiability Modulo Theory (SMT) solving capabilities to encode the aviation mishaps and demonstrate the inference of the missing safety-critical information.
+In what follows, we describe the relevant background material in Chapter~\ref{CH_02}, including the foundations of game theory and the logical models of agency informing our new developments. Chapter~\ref{CH_03} motivates departure from \SFive\ as a static base and present \DASL, then proves that it is sound and complete using the Coq Proof Assistant. Chapter~\ref{CH_04} applies \DASL\ to three aviation mishaps, again formalized in Coq. Chapter~\ref{CH_05} uses the Z3 Theorem Prover's Satisfiability Modulo Theory (SMT) solving capabilities to encode the aviation mishaps and demonstrate the inference of the missing safety-critical information.
