--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -111,12 +111,19 @@
 	 	\bibitem{DELassignment}
 	 	van Ditmarsch, H.P.; van der Hoek, W.; Kooi, B.P. Dynamic Epistemic Logic with Assignment. {\em Proceedings of the fourth internal joint conference on Autonomous agents and multiagent systems}, {\bf 2005}, 141-148.
 	 	% Reference 2
+	 	
 	 	\bibitem{VB_LDII}
 	 	van Benthem, J. {\em Logical Dynamics of Information and Interaction}. Cambridge University Press: New York, USA, 2011.
+	 	
+	 	\bibitem{VB_MLOM}
+	 	van Benthem, J. Modal Logic for Open Minds. Center for the Study of Language and Information, 2010.
+	 	
 	 	\bibitem{ditmarsch}
 	 	Van Ditmarsch, H. "Knowledge games." Bulletin of Economic Research 53.4 (2001): 249-273.
+	 	
 	 	\bibitem{FHMV}
 	 	Fagin, R.; Halpern J.; Moses, Y.; Vardi, M. {\em Reasoning About Knowledge}. The MIT Press: Cambridge, USA, 2003.
+	 	
 	 	\bibitem{DynLog}
 	 	Harel, D.; Kozen, D. and Jerzy Tiuryn. Dynamic logic. MIT press, 2000.
 	 	
@@ -174,6 +181,9 @@
 	 	
 	 	\bibitem{vonWright}
 	 	von Wright, G.H.. ``An Essay on Modal Logic." Amsterdam: North-Holland Publishing Company. 1951.
+	 	
+	 	\bibitem{Williamson}
+	 	Williamson, T. Modal Logic as Metaphysics. Oxford Universty Press: New York, USA, 2013.
 	 	
 	 	\bibitem{Wittgenstein}
 	 	Wittgeinstein, L. ``Philosophical Investigations." Blackwell Publishers. 1953.
