--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -235,10 +235,25 @@ Before presenting our relaxed axiom schema for knowledge, we acknowledge the app
 
 On the intuitive side, the relations that define the semantics of an S5 knowledge operator are equivalence relations. They are defined as reflexive and Euclidean, which implies that they are also transitive and symmetric. Equivalence relations capture a notion of indistinguishability because each world in the equivalence class is indistinguishable from each other. All the modal formulas true at one of the worlds in an equivalence relation are true at each of the other worlds in the relation, so from a modal perspective, they are indistinguishable. When the modality is knowledge, this means that relative to the agent's knowledge, the worlds are indistinguishable. 
 
-This property of \SFive\ epistemic logic is a strong point in its favor. We suppose that any formal system seeking to model human-like knowledge must surely represent the idea that an agent does not know \emph{whether} a proposition $\varphi$ is true or false just in case he cannot distinguish the world he is in from the possible worlds in which either is the case. Distinguishability seems to imply that there is some evidence possessed by the agent that allows her to rule out possibilities, and therefore gain knowledge.
+These properties of \SFive\ epistemic logic are strong points in its favor. We suppose that any formal system seeking to model human-like knowledge must capture the intuitive idea that an agent does not know \emph{whether} a proposition $\varphi$ is true or false just in case she cannot distinguish the world she is in from the possible worlds in which either might be the case. Distinguishability seems to imply that there is some evidence possessed by the agent that allows her to rule out possibilities, and therefore gain knowledge.
+
+The technical benefit of the finite model property makes \SFive\ a friendly logic to work with, but it is not a reason to believe that the theory of knowledge described by \SFive\ is true of human agents. Therefore, we do not see the need to impose this condition as a requirement for realistic epistemic logics. However, it would be desireable to achieve the finite model property while maintaining realism.
+
+Next we turn to a brief summary of doxastic logic, which shall play a role in \DASL's static foundation. 
 
 \section{Doxastic Logic}
-This section presents doxastic logic, the logic for reasoning about belief.
+This section presents doxastic logic, the logic for reasoning about belief. Hintikka's formalization in \cite{Hintikka} of the belief operator is standard, and we adopt it here. The operator $\Bels{i}$ for `agent $i$ believes $\ell$' is defined by a binary relation on worlds that is serial and Euclidean. It is a normal modal operator, and the property of transitivity follows from seriality and Euclidicity. So, the model of an agent's belief is defined by the following axioms,
+
+$\mathbf{Hintikka\ Belief\ Model}$.\\
+(1) $\Bels{i}(\varphi \iimplies \psi) \iimplies (\Bels{i}\varphi \iimplies \Bels{i}\psi)$\\
+(2) $\Bels{i}\varphi \iimplies \BPoss{i}\varphi$\\
+(3) $\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$\\
+(4) $\tlnot \Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$.
+
+Clearly the primary difference between this model of belief and the model of knowledge from classical game theory is axiom (2). Rather than guaranteeing truth, beliefs guarantee consistency. One could correctly argue that this is too strong of an assumption for humans, but we leave relaxations of the belief model to future work, and are content to relax the idealizations about knowledge in this dissertation. Similarly, reasonable cases could be made against axioms (3) and (4).
+
+The logic associated with these axioms is called $\mathcal{KD}\mathit{45}$. On the doxastic interpretation, it represents a slight idealization of how humans actually adopt beliefs. Clearly, humans can have contradictory beliefs, and they may believe something without believing that they believe it. Cases of cognitive dissonance like that are idealized away from, not only because modeling such a psychology is complicated, but also because we seek a logic that maintains some level of normativity. If someone believes two contradictory propositions, she should be able to give one up if this contradiction is pointed out to her, and furthermore she is rational to do so. This reflects Hintikka's goal of developing logics of knowledge and belief that allow us to consistently identify when attributions of knowledge and belief are in some sense criticizable. Maintaining a notion of normativity in a logic is important to us, and underlies some the idealizations we accept in \DASL's static base logic.
+
 %This is formalized in a couple different ways in the literature, sometimes as we did before mapping a proposition-world pair to a Boolean, sometimes defining propositions as sets of worlds, where $V(w)\in p$ if and only if $p$ is true at world $w$. The former convention will be followed here.
 
 
@@ -272,7 +287,7 @@ This section presents doxastic logic, the logic for reasoning about belief.
 %w \models \mathbf{K_{i}}\varphi\  &\mathbf{iff}\ \forall v,\ wR_{i}v\  \mathnormal{implies}\ v \models \varphi.
 %\end{align*}
 
-Early applications of epistemic logic in information security modeled system components as agents whose knowledge represented the information flowing to them. Recently, a modified version of epistemic logic known as dynamic epistemic logic has been used in information security to formally reason about security properties involving human components of systems. The research described in this proposal advances along similar lines, treating pilots as human components of safety critical aviation systems and using dynamic epistemic logic to reason about them. The next section describes the basic dynamic epistemic logic.
+%Early applications of epistemic logic in information security modeled system components as agents whose knowledge represented the information flowing to them. Recently, a modified version of epistemic logic known as dynamic epistemic logic has been used in information security to formally reason about security properties involving human components of systems. The research described in this proposal advances along similar lines, treating pilots as human components of safety critical aviation systems and using dynamic epistemic logic to reason about them. The next section describes the basic dynamic epistemic logic.
 
 \subsection{Dynamic Epistemic Logic}~\label{delsubsection}
 Dynamic Epistemic Logic (DEL) formalizes situations in which agents' epistemic states change over time, due to announcements or other informational events.~\cite{DEL} For example, if Alice truthfully and trustworthily communicates to Bob that $\varphi$, then after this informational even it is true that Bob knows $\varphi$. This situation cannot be modeled by the epistemic logic introduced in the previous section. To model it, we introduce the following formal machinery.
