add background on knowledge and belief combined

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -67,6 +67,9 @@
 	 	\bibitem{Kohler}
 	 	Kohler, R. Lords of the Fly. The University of Chicago Press: Chicago, USA, 1994.
 	 	
+	 	\bibitem{KrausLehmann}
+	 	Kraus, S.; Lehmann D. Knowledge, Belief and Time. {\em Theoretical Computer Science} {\bf 1988}, {\em 58}: 155-174.
+	 	
 	 	\bibitem{Kripke}
 	 	Kripke, S. Semantical Considerations on Modal Logic. {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
 	 	
