--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -205,9 +205,9 @@ Relaxing a frame condition changes the $R$ relation, and in doing so changes the
 	\end{eqnarray}
 \end{itemize}
 
-These conditions are not exhaustive, but they represent some of the commonly combined conditions used to define axioms of different modal logics. By combining frame conditions, a modal operator is defined with the properties desired. For example, if we wish to define a modal operator for reasoning about the knowledge of ideally rational agents, as is done in Fagin \etal\cite{FHMV}, we impose the frame conditions of reflexivity and Euclidicity (Euclideannes), or one that is transitive and reflexive, as in Hintikka~\cite{Hintikka}. However, if we wish to develop a logic for belief, as the previously cited works also do, we must impose transitivity, Euclidicity, and seriality. The reasons for this are explored in the following sections.
+These conditions are not exhaustive, but they represent some of the commonly combined conditions used to define axioms of different modal logics. By combining frame conditions, a modal operator is defined with the properties desired. For example, if we wish to define a modal operator for reasoning about the knowledge of ideally rational agents, as is done in Fagin \etal\cite{FHMV}, we impose the frame conditions of reflexivity and Euclidicity (Euclideanness), or one that is transitive and reflexive, as in Hintikka~\cite{Hintikka}. However, if we wish to develop a logic for belief, as the previously cited works also do, we must impose transitivity, Euclidicity, and seriality. The reasons for this are explored in the following sections.
 
-\section{Epistemic Logic}~\label{epistemic_logic}
+\subsection{Epistemic Logic}~\label{epistemic_logic}
 Epistemic logic began with philosophical concerns about knowledge ~\cite{FHMV,Hintikka,rescher}. Presently, it is likely to be studied in computer science as the logic for reasoning about ideally rational agents in well-structured environments. The agents are ideally rational in the sense that there is no bound on how much they can be said to know, nor on what propositions they are aware of at any one time. Thus, they have no problem conceiving of every possible sequence of moves a game may consist of, evaluating all possible outcomes, and deducing the optimal sequence of moves in order to maximize their own utilities. They are even stronger than contemporary computers in this way, which are bounded by time and space, and so are unable to actually compute the ideal strategy for an otherwise solvable game like Go. An ideally rational agent can solve Go and compute the game tree all the way to its end. These are the agents of game theory, which always select the optimal move when they have perfect information about the game and the other players.
 
 The axioms that specify this level of knowledge are those introduced in Section~\ref{gametheory}, and recounted here without reference to common knowledge, which complicates things too much for our purposes:
@@ -241,7 +241,7 @@ The technical benefit of the finite model property makes \SFive\ a friendly logi
 
 Next we turn to a brief summary of doxastic logic, which shall play a role in \DASL's static foundation. 
 
-\section{Doxastic Logic}
+\subsection{Doxastic Logic}
 This section presents doxastic logic, the logic for reasoning about belief. Hintikka's formalization in \cite{Hintikka} of the belief operator is standard, and we adopt it here. The operator $\Bels{i}$ for `agent $i$ believes $\ell$' is defined by a binary relation on worlds that is serial and Euclidean. It is a normal modal operator, and the property of transitivity follows from seriality and Euclidicity. So, the model of an agent's belief is defined by the following axioms,
 
 $\mathbf{Hintikka\ Belief\ Model}$.\\
@@ -256,6 +256,7 @@ The logic associated with these axioms is called $\mathcal{KD}\mathit{45}$. On t
 
 Knowledge involves a condition that is external to the agent's direct perception: the truth or falsity of the proposition. Belief, on the other hand, is entirely internal to the agent's perception. She can introspect on her evidence and deliberate on a proposition, and this is sufficient to see that she believes or disbelieves it, and this attitude is immediately available to her. For this reason, the positive and negative introspection axioms are more appropriate for belief than they are for knowledge. 
 
+\subsection{Knowledge and Belief Combined}
 In addition to developing a stand-alone axiomatization of the belief operator, Hintikka combined the knowledge and belief operators into a single multi-modal system. Other philosophers and logicians have constructed similar systems. Hintikka considers the following combined axioms, which he calls conditions, as options:
 
 $\mathbf{Hintikka\ Combinations\ Considered}$.\\
@@ -297,7 +298,38 @@ We omit his defense of positive knowledge introspection, but point out that his 
 
 For Hintikka, this suffices to accept the formula as valid, as well as Knowledge implies Belief, for which a similar argument can be presented.
 
-Conversely, Hintikka rejects (3) because he does not find it plausible that $\Bels{i}\varphi \iimplies \Kns{i}\Poss{i}\varphi$, which (3) and the Truth Axiom jointly imply.
+Conversely, Hintikka rejects (3) because he does not find it plausible that \\$\Bels{i}\varphi \iimplies \Kns{i}\Poss{i}\varphi$, which (3) and the Truth Axiom jointly imply. He furthermore rejects arguments from introspection, which might ground a defense in considered formula (3), as fallacious. 
+
+Another potential combined logic of knowledge and belief is due to Kraus and Lehmann in \cite{KrausLehmann}.
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{| l r |}
+			\hline
+			$\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ & Distribution of $\Kns{i}$ \\
+			$\Kns{i}\varphi \iimplies \varphi$ & Truth Axiom \\
+			$\Kns{i}\varphi \iimplies \Kns{i}\Kns{i}\varphi$ & Positive Knowledge Introspection\\
+			$\tlnot\Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\varphi$ & Negative Knowledge Introspection\\
+			$\Bels{i}(\varphi \iimplies \psi) \iimplies (\Bels{i}\varphi \iimplies \Bels{i}\psi)$ & Distribution of $\Bels{i}$\\
+			$\Bels{i}\varphi \iimplies \BPoss{i}\varphi$ & Belief Consistency Axiom\\
+			%			$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$ & Positive Belief Introspection \\
+%			$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
+			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
+			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Known Belief\\
+			%			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
+			From $\vdash \varphi$ and $\vdash \varphi \iimplies \psi$, infer $\vdash\psi$ & Modus Ponens\\
+			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
+			\hline
+		\end{tabular}
+		\caption{Kraus-Lehmann Combined Logic of Knowledge and Belief}
+	\end{center}
+\end{table}
+
+Knowledge is \SFive\ and belief is based on a serial relation. However, from this system the remaining $\mathit{KD45}$ formulas are derivable. Additionally, they have the interesting theorem $\Kns{i}\varphi \equiv \Bels{i}\Kns{i}\varphi$. 
+
+Kraus and Lehmann identify the formula $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ as interesting but excluded, as it would cause a collapse of knowledge and belief into equivalence: $\Kns{i}\varphi \equiv \Bels{i}\varphi$. Obviously, a logic combining knowledge and belief should treat them as distinct operators, and we treat the avoidance of this collapse as a desirable feature of our own static base for \DASL.
+
+This concludes our discussion of static epistemic and doxastic logics, including their combination. We pick this thread back up later when we present the static base of \DASL. The next section presents the relevant background of dynamic extensions to epistemic logic.
 
 %This is formalized in a couple different ways in the literature, sometimes as we did before mapping a proposition-world pair to a Boolean, sometimes defining propositions as sets of worlds, where $V(w)\in p$ if and only if $p$ is true at world $w$. The former convention will be followed here.
 
@@ -334,7 +366,9 @@ Conversely, Hintikka rejects (3) because he does not find it plausible that $\Be
 
 %Early applications of epistemic logic in information security modeled system components as agents whose knowledge represented the information flowing to them. Recently, a modified version of epistemic logic known as dynamic epistemic logic has been used in information security to formally reason about security properties involving human components of systems. The research described in this proposal advances along similar lines, treating pilots as human components of safety critical aviation systems and using dynamic epistemic logic to reason about them. The next section describes the basic dynamic epistemic logic.
 
-\subsection{Dynamic Epistemic Logic}~\label{delsubsection}
+\section{Dynamic Epistemic Logic}~\label{sec:delsection}
+This section presents the so-called \emph{dynamic turn} in modal logic, which incorporates elements of propositional dynamic logic into epistemic logic in order to model knowledge and action. See van Benthem ~\cite{VB_LDII,VB_MLOM,VB_TowardPlay}, and van Ditmarsch, van der Hoek, and Kooi ~\cite{DEL} for detailed examinations.
+
 Dynamic Epistemic Logic (DEL) formalizes situations in which agents' epistemic states change over time, due to announcements or other informational events.~\cite{DEL} For example, if Alice truthfully and trustworthily communicates to Bob that $\varphi$, then after this informational even it is true that Bob knows $\varphi$. This situation cannot be modeled by the epistemic logic introduced in the previous section. To model it, we introduce the following formal machinery.
 
 To capture informational events, we introduce the idea of relativizing a Kripke structure. In the previous example, if we model the Alice and Bob situation prior to Alice's communication, we can have a world $w$ from which Bob considers $\varphi$- as well as $\neg\varphi$-worlds possible. However, after the informational event, Bob knows $\varphi$, so the model is \emph{relativized} to a submodel in which only $\varphi$-worlds are accessible by Bob's epistemic possibility relation. Thus, after the informational event, the model transitions to a submodel with fewer edge relations.
