Kraus and Lehmann confidence in belief axiom

--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -327,7 +327,7 @@ Another potential combined logic of knowledge and belief is due to Kraus and Leh
 
 Knowledge is \SFive\ and belief is based on a serial relation. However, from this system the remaining $\mathit{KD45}$ formulas are derivable. Additionally, they have the interesting theorem $\Kns{i}\varphi \equiv \Bels{i}\Kns{i}\varphi$. 
 
-Kraus and Lehmann identify the formula $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ as interesting but excluded, as it would cause a collapse of knowledge and belief into equivalence: $\Kns{i}\varphi \equiv \Bels{i}\varphi$. Obviously, a logic combining knowledge and belief should treat them as distinct operators, and we treat the avoidance of this collapse as a desirable feature of our own static base for \DASL.
+Kraus and Lehmann identify the formula $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ as interesting but exclude it, as it would cause a collapse of knowledge and belief into equivalence: $\Kns{i}\varphi \equiv \Bels{i}\varphi$. Obviously, a logic combining knowledge and belief should treat them as distinct operators, and we treat the avoidance of this collapse as a desirable feature of our own static base for \DASL. We also include the interesting formula above as an axiom, which imposes a condition on agents' beliefs that we consider a desireable idealization. To say $i$ believes $\varphi$ only if she believes that she knows $\varphi$ is to say she believes only those things that she has very good evidence for. This helps prevent agents from believing things without evidence, which we want to exclude from our model. The challenge with this axiom, as Kraus and Lehmann note, is to avoid the knowledge-belief collapse. We give this further treatment in a later chapter.
 
 This concludes our discussion of static epistemic and doxastic logics, including their combination. We pick this thread back up later when we present the static base of \DASL. The next section presents the relevant background of dynamic extensions to epistemic logic.
 
